# evm-system

./: .gitignore  LICENSE  README.md  application.py  cli.py  config.py  main.py  pyproject.toml  requirements.txt
clients/admin/: admin_cli.py  admin_client.py
clients/base/: base_client.py
clients/terminal/: terminal_cli.py  terminal_client.py
data/: candidates.json  seed.py  voters.json
data/data-gen/: voters.py
database/: connection.py  database.py  init_db.py  migrations.py  schema.sql  seed.py  unit_of_work.py
docs/: architecture.md  database_design.md  protocol.md  state_machine.md
events/: event_bus.py  event_types.py  subscribers.py
models/: candidate.py  enums.py  event.py  metadata.py  vote.py
repositories/: base_repository.py  candidate_repository.py  event_repository.py  metadata_repository.py  terminal_repository.py  vote_repository.py
security/: auth.py
server/: connection_manager.py  errors.py  protocol.py  rpc_dispatcher.py  websocket_server.py
services/: audit_service.py  backup_service.py  election_service.py  metrics_service.py  state_machine.py
tests/: test_audit_ledger.py  test_backup_service.py  test_candidate_repository.py  test_conn.py  test_election_service.py  test_rpc_dispatcher.py  test_state_machine.py
utils/: hashing.py
