[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "evm-system"
version = "1.5.0"
description = "Asynchronous event-driven electronic voting backend"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
    "aiosqlite==0.22.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.8.0",
    "typer==0.26.7",
    "websockets==16.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.16,<2",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.0,<2",
    "ruff>=0.12,<1",
]

[project.scripts]
evm = "cli:app"

[tool.setuptools]
py-modules = ["application", "cli", "config", "main"]

[tool.setuptools.packages.find]
include = [
    "clients*",
    "database*",
    "events*",
    "models*",
    "repositories*",
    "security*",
    "server*",
    "services*",
    "utils*",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.mypy]
python_version = "3.13"
check_untyped_defs = true
warn_unused_ignores = true
